# smart-goblin

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
doc/: ARCHITECTURE.md  CONCEPT.md  PLAN.md  PLAN_PHASE_1.md  PLAN_PHASE_2.md  PLAN_PHASE_3.md  PLAN_PHASE_4.md
doc/tasks/: fix-broken-tests.md
migrations/: env.py
migrations/versions/: af412fc86ff3_add_active_set_code_to_users.py  b3e8d2a17c45_add_parent_set_code_to_sets.py  c641d7ccab14_initial_schema_with_sets_cards_users_.py
scripts/: add_set.py  deploy-stage.ps1  deploy-stage.sh  dev-db.ps1  dev-db.sh  healthcheck.py  start.sh
src/: config.py  main.py
src/bot/: keyboards.py  messages.py  middlewares.py
src/core/: __init__.py  advisor.py  analyzer.py  deck.py  lands.py
src/db/: __init__.py  models.py  repository.py  session.py
src/llm/: __init__.py  client.py  exceptions.py  prompts.py
src/parsers/: __init__.py  base.py  grade_validator.py  scheduler.py  scryfall.py  scryfall_variants.py  seventeen_lands.py
src/reports/: __init__.py  html.py  models.py  telegram.py
src/vision/: __init__.py  card_matcher.py  layouts.py  prompts.py  recognizer.py
tests/: conftest.py  test_config.py
tests/integration/: __init__.py  test_dfc_card_lookup.py  test_e2e_flow.py  test_parent_set_code_flow.py  test_parser_integration.py  test_photo_analysis.py
tests/test_bot/: test_advice_indicator.py  test_analyze_photo_routing.py  (+4 more)
(+18 files in other folders)
