[project]
name = "smart-goblin"
version = "0.1.0"
description = "MTG Draft deck analyzer Telegram bot with AI-powered card recognition"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.4",
    "openai>=1.12",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "pydantic-settings>=2.2",
    "alembic>=1.13",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "testcontainers>=4.0",
    "pytest-cov>=4.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
